# devTechExamRepo

./: CMakeLists.txt  README.md  test.c
myString/: CMakeLists.txt  stringM.c  stringM.h
